JavaProject/src/info3/parser/javacc/projet/langageC/test/pass/test17.c
ALGORITHM(test17){
	int a = 2;
}
