JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test6.c
ALGORITHM(test6){
	if(a | b){
		a = 1;
	} else {
		a = 1;
	}
}
